--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,11 @@
 /* You can add global styles to this file, and also import other style files */
+body {
+    margin: 0;
+    line-height: 1.2;
+    font-family: "Montserrat", "Arial", sans-serif !important;
+    color: #000000;
+    background-color: #f2f2f2;
+}
+/* Importing Bootstrap SCSS file. */
+@import '~bootstrap/scss/bootstrap';
+@import '~assets/fonts/common_fonts.scss'
