--- a/src/styles.scss
+++ b/src/styles.scss
@@ -8,4 +8,4 @@ body {
 }
 /* Importing Bootstrap SCSS file. */
 @import '~bootstrap/scss/bootstrap';
-@import '~assets/fonts/common_fonts.scss'
+@import '~assets/fonts/common_fonts.scss';
