--- a/src/app/modules/trip-module/components/trip-list/trip-list.component.html
+++ b/src/app/modules/trip-module/components/trip-list/trip-list.component.html
@@ -2,7 +2,7 @@
 <section class="page-body">
     <div class="container trip-list">
         <div class="d-flex justify-content-between trip-titles">
-            <p *ngFor="let label of headerLables" class="trip-label" [ngClass]="{'col-2' : label === 'PRICE', 'col-3': label !== 'PRICE', 'col-4' : label === 'EVENT'}">{{ label }}</p>
+            <p *ngFor="let label of headerLables" class="trip-label" [ngClass]="{'col-2' : label === 'PRICE', 'col-3': label !== 'PRICE', 'col-4' : label === 'OFFERS', 'mr-4': label === 'EVENT'}">{{ label }}</p>
         </div>
         <app-add-trip-item></app-add-trip-item>
         <app-trip-item></app-trip-item>
