--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,3 +1,7 @@
+/* Importing Bootstrap SCSS file. */
+@import '~bootstrap/scss/bootstrap';
+@import '~assets/fonts/common_fonts.scss';
+@import "~@ng-select/ng-select/themes/default.theme.css";
 /* You can add global styles to this file, and also import other style files */
 body {
     margin: 0;
@@ -6,6 +10,16 @@ body {
     color: #000000;
     background-color: #f2f2f2;
 }
-/* Importing Bootstrap SCSS file. */
-@import '~bootstrap/scss/bootstrap';
-@import '~assets/fonts/common_fonts.scss';
+
+.event__type {}
+
+.visually-hidden {
+    position: absolute;
+    overflow: hidden;
+    clip: rect(0 0 0 0);
+    width: 1px;
+    height: 1px;
+    padding: 0;
+    margin: -1px;
+    border: 0;
+}
