--- a/src/app/modules/trip-module/components/trip-list/trip-item/trip-item.component.scss
+++ b/src/app/modules/trip-module/components/trip-list/trip-item/trip-item.component.scss
@@ -29,4 +29,8 @@
     .offers {
         font-weight: 900;
     }
+
+    .event__rollup-btn {
+        transform: translate(50%, 50%) rotate(0deg);
+    }
 }
