--- a/src/app/modules/trip-module/components/header/header.component.html
+++ b/src/app/modules/trip-module/components/header/header.component.html
@@ -13,7 +13,7 @@
             <p class="trip-info__cost">
                 Total: €&nbsp;<span class="trip-info__cost-value">2300</span>
             </p>
-            <button class="trip-main__event-add-btn  btn  btn--big  btn--yellow" type="button">+ New event</button>
+            <button class="trip-main__event-add-btn btn btn--big btn--yellow" type="button" (click)="openEditForm()">+ New event</button>
         </div>
         
     </div>
