--- a/src/app/modules/trip-module/components/trip-list/add-trip-item/add-trip-item.component.html
+++ b/src/app/modules/trip-module/components/trip-list/add-trip-item/add-trip-item.component.html
@@ -1,78 +1,89 @@
-<form [formGroup]="tripForm" class="event__edit">
+<form [formGroup]="tripForm" (ngSubmit)="submit()" class="event__edit">
     <section class="event__header">
 
         <!-- Type of destination -->
 
-        <div class="event__type-wrapper">
+        <div class="event__type-wrapper mr-0">
             <ng-select
                 [items]="offers$ | async"
                 bindValue="type"
                 bindLabel="type"
-                formControlName="tripType"
+                formControlName="type"
                 [searchable]="false"
                 [clearable]="false"
-                (change)="selectType()">
+                (change)="selectType()"
+                ngDefaultControl>
                 <ng-template ng-option-tmp ng-label-tmp
                     let-item="item">
                     <div class="d-flex align-items-center">
                         <div class="event__type  event__type-btn mr-2">
                             <img class="event__type-icon" width="17" height="17" [src]="getIcon(item.type)" alt="Event type icon">
                         </div>
-                        {{item.type }}
+                        {{item.type | titlecase }}
                     </div>
                 </ng-template>
             </ng-select>
         </div>
     
         <!-- City -->
-        <div class="event__field-group  event__field-group--destination">
+        <div class="event__field-group event__field-group--destination p-0">
             <ng-select
                 class="destination__ng-select"
                 bindValue="name"
                 bindLabel="name"
-                formControlName="tripDestination"
+                placeholder="Select city"
+                formControlName="destination"
                 [searchable]="false"
                 [clearable]="false"
-                (change)="selectDestination()">
+                (change)="selectDestination()"
+                ngDefaultControl>
                 <ng-option *ngFor="let item of destinations$ | async" [value]="item.name">{{ item.name }}</ng-option>
             </ng-select>
         </div>
     
         <!-- Date -->
-        <div class="event__field-group  event__field-group--time">
-            <label class="visually-hidden" for="event-start-time-1"> From </label>
-            <!-- | date:'short' -->
-            <input class="event__input event__input--time flatpickr-input" id="event-start-time-1" type="text" name="event-start-time" value="10/08/2021 15:10" readonly="readonly">
+        <div class="event__field-group  event__field-group--time p-0">
+            <span>From</span>
+                <input formControlName="date_from" placeholder="Select date" matInput [matDatepicker]="picker1">
+                <mat-datepicker-toggle matSuffix [for]="picker1"></mat-datepicker-toggle>
+                <mat-datepicker #picker1></mat-datepicker>
             —
-            <label class="visually-hidden" for="event-end-time-2"> To </label>
-            <input class="event__input event__input--time flatpickr-input" id="event-end-time-2" type="text" name="event-end-time" value="10/08/2021 15:10" readonly="readonly">
+            <span class="pl-2">To</span>
+                <input formControlName="date_to" placeholder="Select date" matInput [matDatepicker]="picker">
+                <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+                <mat-datepicker #picker></mat-datepicker>
         </div>
         
         <!-- Price -->
         <div class="event__field-group  event__field-group--price">
-            <label class="event__label" for="event-price-2">€</label>
-            <input class="event__input  event__input--price" id="event-price-1" type="number" name="event-price" value="" required="">
+            <label class="event__label" for="event-price">€</label>
+            <input class="event__input event__input--price" id="event-price" formControlName="base_price" type="number" name="event-price" value="" required="">
         </div>
     
-        <button class="event__save-btn  btn  btn--blue" type="submit">Save</button>
+        <!-- isFavorite -->
+        <div>
+            <input id="event-favorite" class="event__favorite-checkbox visually-hidden" type="checkbox" name="event-favorite" formControlName="is_favorite" [checked]="">
+            <label class="event__favorite-btn" for="event-favorite">
+                <span class="visually-hidden">Add to favorite</span>
+                <svg class="event__favorite-icon" width="28" height="28" viewBox="0 0 28 28">
+                  <path d="M14 21l-8.22899 4.3262 1.57159-9.1631L.685209 9.67376 9.8855 8.33688 14 0l4.1145 8.33688 9.2003 1.33688-6.6574 6.48934 1.5716 9.1631L14 21z"></path>
+                </svg>
+            </label>
+        </div>
+
+        <button class="event__save-btn  btn  btn--blue" type="submit" [disabled]="!tripForm.valid">Save</button>
         <button class="event__reset-btn btn" type="reset">Delete</button>
     
-        <button class="event__favorite-btn">
-            <svg class="event__favorite-icon" width="28" height="28" viewBox="0 0 28 28">
-              <path d="M14 21l-8.22899 4.3262 1.57159-9.1631L.685209 9.67376 9.8855 8.33688 14 0l4.1145 8.33688 9.2003 1.33688-6.6574 6.48934 1.5716 9.1631L14 21z"></path>
-            </svg>
-        </button>
-    
-        <button class="event__rollup-btn" type="button"></button>
+        <button class="event__rollup-btn" type="button" (click)="closeEditForm()"></button>
     </section>
       
     <section *ngIf="selectedType || selectedDestination" class="event__details">
         <div *ngIf="selectedType" class="offers">
             <h3 class="event__section-title  event__section-title--offers">Offers</h3>
-            <div class="d-flex">
+            <div class="d-flex flex-wrap">
                 <div *ngFor="let offer of selectedType[0].offers; let i = index">
-                    <div class="event__offer-selector mr-3">
-                        <input class="event__offer-checkbox visually-hidden" [id]='i' type="checkbox" [name]="selectedType[0].type">
+                    <div class="event__offer-selector mb-3 mr-3">
+                        <input class="event__offer-checkbox visually-hidden" formControlName="offers" [id]='i' type="checkbox" [name]="selectedType[0].type">
                         <label class="event__offer-label" [for]="i">
                             <span class="pr-3">{{ offer.title }}</span>
                             <span>+ {{ offer.price }}</span>
