--- a/src/app/modules/trip-module/components/trip-list/trip-item/trip-item.component.html
+++ b/src/app/modules/trip-module/components/trip-list/trip-item/trip-item.component.html
@@ -1,25 +1,32 @@
 
-<section class="d-flex justify-content-between trip-item" *ngFor="let item of tripList$ | async">
-    <div class="d-flex col-3 mr-4">
-        <div class="event__type">
-            <img class="event__type-icon" width="42" height="42" [src]="getIcon(item.type)" alt="Event type icon">
+<section *ngFor="let item of tripList$ | async; let i = index">
+    <div *ngIf="!(isEditModeOpened$ | async) || i != selectedItemId" class="d-flex justify-content-between trip-item">
+        <div class="d-flex col-3 mr-4">
+            <div class="event__type">
+                <img class="event__type-icon" width="42" height="42" [src]="getIcon(item.type)" alt="Event type icon">
+            </div>
+            <div class="d-flex">
+                <div class="event__title">{{ item.type | titlecase }}</div>
+                <div class="ml-2 mr-2">{{ checkType(item.type) }}</div>
+                <div class="event__title">{{ item.destination.name }}</div>
+            </div>
         </div>
-        <div class="d-flex">
-            <div class="event__title">{{ item.type | titlecase }}</div>
-            <div class="ml-2 mr-2">{{ checkType(item.type) }}</div>
-            <div class="event__title">{{ item.destination.name }}</div>
+        <div class="event__time col-3">
+            <time class="event__start-time">{{ item.date_from | date: 'shortTime' }}</time> —
+            <time class="event__end-time">{{ item.date_to | date: 'shortTime' }}</time>
         </div>
-
+        <div class="col-2">€ {{ item.base_price }}</div>
+        <div class="col-4">
+            <div class="d-flex offers" *ngFor="let offer of item.offers">
+                <div class="mr-2">{{ offer.title }}</div>
+                <div>+ {{ offer.price }}</div>
+            </div>
+        </div>
+        <div class="col-1 mt-3 ml-3">
+            <button class="event__rollup-btn" type="button" (click)="openEditMode(item)"></button>
+        </div>
     </div>
-    <div class="event__time col-3">
-        <time class="event__start-time">{{ item.date_from | date: 'shortTime' }}</time> —
-        <time class="event__end-time">{{ item.date_to | date: 'shortTime' }}</time>
-    </div>
-    <div class="col-2">{{ item.base_price }}</div>
-    <div class="col-4">
-        <div class="d-flex offers" *ngFor="let offer of item.offers">
-            <div class="mr-2">{{ offer.title }}</div>
-            <div>+ {{ offer.price }}</div>
-        </div>
+    <div *ngIf="(isEditModeOpened$ | async) && i == selectedItemId">
+        <app-add-trip-item [selectedItem]="item"></app-add-trip-item>
     </div>
 </section>
