--- a/src/styles.scss
+++ b/src/styles.scss
@@ -11,8 +11,6 @@ body {
     background-color: #f2f2f2;
 }
 
-.event__type {}
-
 .visually-hidden {
     position: absolute;
     overflow: hidden;
@@ -22,4 +20,31 @@ body {
     padding: 0;
     margin: -1px;
     border: 0;
+}
+
+.event__rollup-btn {
+    position: relative;
+    background-color: transparent;
+    border: none;
+}
+
+.event__rollup-btn::after {
+    content: "";
+    position: absolute;
+    top: 5px;
+    left: 50%;
+    width: 15px;
+    height: 15px;
+    border-right: 2px solid #000000;
+    border-bottom: 2px solid #000000;
+    transform: translate(-50%, -50%) rotate(225deg);
+    transition: border-color 0.2s, transform 0.6s;
+}
+
+.event__rollup-btn:hover::after {
+    border-color: #0d8ae4;
+}
+
+.mat-button-base {
+    height: 35px !important;
 }
