--- a/src/app/modules/trip-module/components/trip-list/add-trip-item/add-trip-item.component.html
+++ b/src/app/modules/trip-module/components/trip-list/add-trip-item/add-trip-item.component.html
@@ -11,15 +11,16 @@
                 formControlName="type"
                 [searchable]="false"
                 [clearable]="false"
-                (change)="selectType()"
+                (change)="selectOfferType()"
                 ngDefaultControl>
                 <ng-template ng-option-tmp ng-label-tmp
                     let-item="item">
                     <div class="d-flex align-items-center">
                         <div class="event__type  event__type-btn mr-2">
-                            <img class="event__type-icon" width="17" height="17" [src]="getIcon(item.type)" alt="Event type icon">
+                            <img class="event__type-icon" width="17" height="17" [src]="item.type | icons" alt="Event type icon">
                         </div>
                         {{item.type | titlecase }}
+                        {{ item.type | offerType }}
                     </div>
                 </ng-template>
             </ng-select>
@@ -28,16 +29,17 @@
         <!-- City -->
         <div class="event__field-group event__field-group--destination p-0">
             <ng-select
+                [items]="destinations$ | async"
                 class="destination__ng-select"
                 bindValue="name"
                 bindLabel="name"
+                [compareWith]="equals"
                 placeholder="Select city"
                 formControlName="destination"
                 [searchable]="false"
                 [clearable]="false"
                 (change)="selectDestination()"
                 ngDefaultControl>
-                <ng-option *ngFor="let item of destinations$ | async" [value]="item.name">{{ item.name }}</ng-option>
             </ng-select>
         </div>
     
@@ -72,18 +74,18 @@
         </div>
 
         <button class="event__save-btn  btn  btn--blue" type="submit" [disabled]="!tripForm.valid">Save</button>
-        <button class="event__reset-btn btn" type="reset" (click)="deleteTrip()" [disabled]="!selectedItem">Delete</button>
+        <button class="event__reset-btn btn" type="reset" (click)="removeTrip()" [disabled]="!selectedItem">Delete</button>
     
         <button class="event__rollup-btn" type="button" (click)="closeEditForm()"></button>
     </section>
       
-    <section *ngIf="selectedType || selectedDestination" class="event__details">
+    <section class="event__details">
         <div *ngIf="selectedType" class="offers">
             <h3 class="event__section-title  event__section-title--offers">Offers</h3>
             <div class="d-flex flex-wrap">
-                <div *ngFor="let offer of selectedType[0].offers; let i = index">
-                    <div class="event__offer-selector mb-3 mr-3">
-                        <input class="event__offer-checkbox visually-hidden" formControlName="offers" [id]='i' type="checkbox" [name]="selectedType[0].type">
+                <div *ngFor="let offer of selectedType; let i = index">
+                    <div class="event__offer-selector mb-3 mr-3" >
+                        <input class="event__offer-checkbox visually-hidden" (change)="selectOffers(offer)" formControlName="offers" [id]='i' type="checkbox" [name]="tripForm.controls.type.value">
                         <label class="event__offer-label" [for]="i">
                             <span class="pr-3">{{ offer.title }}</span>
                             <span>+ {{ offer.price }}</span>
@@ -94,9 +96,9 @@
         </div>
         <div *ngIf="selectedDestination" class="destinations mt-4">
             <h3 class="event__section-title event__section-title--offers">DESTINATION</h3>
-            <p>{{ selectedDestination[0].description }}</p>
+            <p>{{ selectedDestination.description }}</p>
             <div class="d-flex picture-container">
-                <div *ngFor="let picture of selectedDestination[0].pictures; let i = index">
+                <div *ngFor="let picture of selectedDestination.pictures">
                     <div class="event__destinations-selector mr-3">
                         <img [src]="picture.src" alt="img">
                     </div>
