--- a/src/app/modules/trip-module/components/trip-list/add-trip-item/add-trip-item.component.scss
+++ b/src/app/modules/trip-module/components/trip-list/add-trip-item/add-trip-item.component.scss
@@ -11,7 +11,7 @@ label {
 .event__edit {
     display: block;
     margin-left: -41px;
-    margin-right: -20px;
+    margin-right: -120px;
     padding: 0;
     background-color: #ffffff;
     border-radius: 18px;
@@ -57,9 +57,8 @@ label {
             width: 90px;
         }
 
-        .event__type-wrapper,
         .event__field-group--destination {
-            min-width: 150px;
+            min-width: 170px;
             margin-top: -5px;
 
             .destination__ng-select {
@@ -67,11 +66,16 @@ label {
             }
         }
 
+        .event__type-wrapper {
+            min-width: 190px;
+            margin-top: -5px;
+        }
+
         .btn {
             display: flex;
             align-items: center;
             justify-content: center;
-            padding: 4px 16px 5px;
+            padding: 4px 22px 5px;
             font-weight: 700;
             font-size: 17px;
             line-height: 21px;
